WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240737
Fix webpushd crash when removing notification permissions
https://bugs.webkit.org/show_bug.cgi?id=240737
Summary
Fix webpushd crash when removing notification permissions
Ben Nham
Reported
2022-05-20 14:29:58 PDT
When removing notification permissions for an origin, webpushd crashes because of a RELEASE_ASSERT that fires in AppBundleRequest::start when mock bundles aren't enabled or ENABLE_INSTALL_COORDINATION_BUNDLES isn't defined.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-20 14:40:39 PDT
<
rdar://problem/93679369
>
Ben Nham
Comment 2
2022-05-20 14:40:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/858
EWS
Comment 3
2022-05-23 21:01:03 PDT
Committed
r294726
(
250904@main
): <
https://commits.webkit.org/250904@main
> Reviewed commits have been landed. Closing PR #858 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug